--- a/src/components/keypad.css
+++ b/src/components/keypad.css
@@ -4,7 +4,7 @@
     color: aliceblue;
 }
 
-.keypad{
+.Keypad{
     /* margin: 2px; */
     background-color: rgba(0, 0, 0, 0.822) ;
 }
@@ -12,9 +12,9 @@
 #num{
     background-color: rgba(0, 0, 0, 0.911);
 }
-#dropdown{
+/* #dropdown{ */
     /* width: 80%; */
-}
+/* } */
 #m{
     /* width: 50%; */
     border: 0 black;
